--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<h1>This is a heading</h1>
-<p>This is a paragraph.</p>
+<h1>alexis geoffrey</h1>
+<h2>Computer Science - San Diego State University 2019</h2><br><br>
+<p>projects:<br><br>
+indoctrinated neural network<br>
+<a href="https://github.com/alexisgeoffrey/5moreminutes">5moreminutes</a></p>
+
+<p class="footer"><a href="https://www.github.com/alexisgeoffrey">github</a> -- <a href="mailto:alexis.geoffrey97@gmail.com">email</a> -- <a href="www.linkedin.com/in/alexis-geoffrey-89a017113">linkedin</a> 
+</p>
 
 </body>
 </html>
