--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 indoctrinated neural network<br>
 <a href="https://github.com/alexisgeoffrey/5moreminutes">5moreminutes</a></p>
 
-<p class="footer"><a href="https://www.github.com/alexisgeoffrey">github</a> -- <a href="mailto:alexis.geoffrey97@gmail.com">email</a> -- <a href="www.linkedin.com/in/alexis-geoffrey-89a017113">linkedin</a> 
+<p class="footer"><a href="https://www.github.com/alexisgeoffrey">github</a> -- <a href="mailto:alexis.geoffrey97@gmail.com">email</a> -- <a href="https://www.linkedin.com/in/alexis-geoffrey-89a017113">linkedin</a> 
 </p>
 
 </body>
