--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>alexis geoffrey</title>
-  <link rel="stylesheet" href="styles.css">
   <meta name="author" content="Alexis Geoffrey">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -16,12 +16,14 @@
 <body>
 
 <h1>alexis geoffrey</h1>
-<h2>Computer Science - San Diego State University 2019</h2><br><br>
+<h2>Computer Science - San Diego State University 2019</h2><br>
 <p>projects:<br><br>
 indoctrinated neural network<br>
-<a href="https://github.com/alexisgeoffrey/5moreminutes">5moreminutes</a></p>
+<a href="https://github.com/alexisgeoffrey/5moreminutes">5moreminutes</a><br>
+<a href="https://web.archive.org/web/20161201221134/http://www.sdsucirclek.com:80/">sdsu circleK website archive (slightly broken)</a><br>
+<a href="https://github.com/alexisgeoffrey/prolog-pentago">prolog-pentago</a></p>
 
-<p class="footer"><a href="https://www.github.com/alexisgeoffrey">github</a> -- <a href="mailto:alexis.geoffrey97@gmail.com">email</a> -- <a href="https://www.linkedin.com/in/alexis-geoffrey-89a017113">linkedin</a> 
+<p id="footer"><a href="https://www.github.com/alexisgeoffrey">github</a> -- <a href="mailto:alexis.geoffrey97@gmail.com">email</a> -- <a href="https://www.linkedin.com/in/alexis-geoffrey-89a017113">linkedin</a> 
 </p>
 
 </body>
