--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h1>alexis geoffrey</h1>
 <h2>Computer Science - San Diego State University 2019</h2><br>
 <p>projects:<br><br>
-indoctrinated neural network<br>
+indoctrinated neural network (coming soon)<br>
 <a href="https://github.com/alexisgeoffrey/5moreminutes">5moreminutes</a><br>
 <a href="https://web.archive.org/web/20161201221134/http://www.sdsucirclek.com:80/">sdsu circleK website archive (slightly broken)</a><br>
 <a href="https://github.com/alexisgeoffrey/prolog-pentago">prolog-pentago</a></p>
