--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <h1>alexis geoffrey</h1>
-<h2>Bachelor of Science in Computer Science - San Diego State University 2019</h2><br>
+<h2>Bachelor of Science in Computer Science - Minor in Philosophy<br>San Diego State University 2019</h2><br>
 <p>projects:<br><br>
 indoctrinated neural network (coming soon)<br>
 <a href="https://github.com/alexisgeoffrey/5moreminutes">5moreminutes</a><br>
