updated linkedin link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ indoctrinated neural network (coming soon)<br>
 <a href="https://web.archive.org/web/20161201221134/http://www.sdsucirclek.com:80/">sdsu circleK website archive (slightly broken)</a><br>
 <a href="https://github.com/alexisgeoffrey/prolog-pentago">prolog-pentago</a></p>
 
-<p id="footer"><a href="https://www.github.com/alexisgeoffrey">github</a> -- <a href="mailto:alexis.geoffrey97@gmail.com">email</a> -- <a href="https://www.linkedin.com/in/alexis-geoffrey-89a017113">linkedin</a> 
+<p id="footer"><a href="https://www.github.com/alexisgeoffrey">github</a> -- <a href="mailto:alexis.geoffrey97@gmail.com">email</a> -- <a href="https://www.linkedin.com/in/alexis-geoffrey">linkedin</a> 
 </p>
 
 </body>
